--- a/BookFriends/appsettings.json
+++ b/BookFriends/appsettings.json
@@ -9,5 +9,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "BrowseCommunitiesPaginationSize": 10,
+  "BrowseMembershipsPaginationSize":  5
 }
