Initial integration of VueJS with /Communities/Browse

--- a/BookFriends/BookFriends.csproj
+++ b/BookFriends/BookFriends.csproj
@@ -1,8 +1,15 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Remove="wwwroot\lib\babel\**" />
+    <Content Remove="wwwroot\lib\babel\**" />
+    <EmbeddedResource Remove="wwwroot\lib\babel\**" />
+    <None Remove="wwwroot\lib\babel\**" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.8">
