--- a/BookFriends/appsettings.json
+++ b/BookFriends/appsettings.json
@@ -12,6 +12,7 @@
   "AllowedHosts": "*",
   "BrowseCommunities_CommunitiesPaginationSize": 2,
   "BrowseCommunities_MembershipsPaginationSize": 5,
-  "ViewCommunity_MembersPaginationSize": 5,  
-   "ViewCommunity_BooksPaginationSize": 4
+  "ViewCommunity_MembersPaginationSize": 5,
+  "ViewCommunity_BooksPaginationSize": 4,
+  "MaxSearchQueryDistance":  20
 }
