Adds vue component for search bar

--- a/BookFriends/appsettings.json
+++ b/BookFriends/appsettings.json
@@ -14,5 +14,5 @@
   "BrowseCommunities_MembershipsPaginationSize": 5,
   "ViewCommunity_MembersPaginationSize": 5,
   "ViewCommunity_BooksPaginationSize": 4,
-  "MaxSearchQueryDistance":  20
+  "MaxSearchQueryResults": 5
 }
